# emoProc

./: .gitignore  CMakeLists.txt  configure  label_training.py  plotter.py
src/: CMakeLists.txt  audio_capture.cpp  audio_capture.h  audio_capture_thread.cpp  audio_capture_thread.h  audio_processor.cpp  audio_processor.h  audio_processor_thread.cpp  audio_processor_thread.h  classifier.cpp  classifier.h  feature_extractor.cpp  feature_extractor.h  features.cpp  features.h  filter.cpp  filter.h  initializer.cpp  initializer.h  logger.cpp  logger.h  main.cpp  my_feature_extractor.cpp  my_feature_extractor.h  pitch.cpp  pitch.h  settings_mgr.cpp  settings_mgr.h  speech_energy.cpp  speech_energy.h  thread.cpp  thread.h
src/jackcpp/: jackringbuffer.hpp
src/jackcpp/.svn/: entries
src/svm/: svm-predict.c  svm-scale.c  svm_predict.cpp  svm_scale.cpp
tools/: Makefile  check_results.py  doTest.py  doTestWeka.py  emoteResults-3-14-2012.txt  plotter.py  shit_player.c
